fix: List option to account for scrollbar width

--- a/src/components/VirtualizedSelect.css
+++ b/src/components/VirtualizedSelect.css
@@ -11,6 +11,7 @@
           align-items: center;
   padding: 0 .5rem;
   cursor: pointer;
+  width: calc(100% - 17px) !important; 
 }
 
 .VirtualizedSelectFocusedOption {
